<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startingActivity.LoginActivity"
    android:background="@drawable/back2">

    <EditText
        android:id="@+id/email"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/login"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/button_round"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.142" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="197dp"
        android:layout_height="167dp"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="107dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@drawable/slogo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="99dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/forgot_password_reset_here"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>