<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startingActivity.SignUpActivity"
    android:background="@drawable/back4">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="197dp"
        android:layout_height="167dp"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="107dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        app:srcCompat="@drawable/slogo"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/email"

        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_mail_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/signup"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_round"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:textColor="#ffff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintVertical_bias="0.172" />

</androidx.constraintlayout.widget.ConstraintLayout>